@@ -18,9 +18,9 @@
 	<ul>
 		<!--<a href="/mcqreports/"><button id="mcqreports" type="button"style="width:200px;height:100px">Old MCQ Report</button></a>-->
 		<!--<a href="/statementsreports/"><button id="statementsreports" type="button"style="width:200px;height:100px">Old Statements Report</button></a>-->
-		<a href="/reports/mystmtsdynadb/"><button id="mystmtsdynadb" type="button"style="width:200px;height:100px">My Statements Report</button></a>
+		<!--<a href="/reports/mystmtsdynadb/"><button id="mystmtsdynadb" type="button"style="width:200px;height:100px">My Statements Report</button></a>-->
 		<a href="/reports/stmtsdynadb/"><button id="stmtsdynadb" type="button"style="width:200px;height:100px">All Statements Report</button></a>
-		<a href="/reports/chartjstest_selection/"><button id="chartjstest" type="button"style="width:200px;height:100px">Day Usage Report</button></a>
+		<!--<a href="/reports/chartjstest_selection/"><button id="chartjstest" type="button"style="width:200px;height:100px">Day Usage Report</button></a>-->
 		<a href="/reports/usagereport_selection/"><button id="usagereport" type="button"style="width:200px;height:100px">Usage Report</button></a>
 		
 	</ul>
